# cairn

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRODUCT.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.cairn/: config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  prepare-release.yml  release.yml  repo-regression.yml
benchmarks/: README.md  architecture.toml
docs/: canvas.html  golden-docs-standard.md  index.html  inspector-principle.html  release-checklist.md  repo-docs-workflow-canvas.html  repo-lifecycle-canvas.html  retrieval-architecture-canvas.html
docs/decisions/: 0000-template.md  0001-foundation.md  0002-mcp-discoverability.md  0002-production-readiness-roadmap.md  0003-heuristic-entity-recall.md
docs/specs/: mcp-tools.md
examples/: hero-demo.md  real-llm-doubao.md
scripts/: eval_repos.py  prepare_release.py  smoke_many_repos.py  verify_pypi_install.py
skills/cairn-friendly-docs/: SKILL.md  manifest.json
skills/cairn-friendly-docs/agents/: openai.yaml
skills/release-cairn/: SKILL.md
skills/release-cairn/agents/: openai.yaml
src/cairn/: __init__.py  agent_guidance.py  inspection.py  providers.py  repo.py  repo_search.py
src/cairn/bench/: __init__.py  baseline.py  dataset.py  judge.py  metrics.py  report.py  runner.py
src/cairn/cli/: __init__.py  app.py  config.py
src/cairn/client/: __init__.py  server.py
src/cairn/client/static/: __init__.py  app.js  index.html  styles.css
src/cairn/core/: __init__.py  config.py  errors.py  types.py
src/cairn/embed/: __init__.py  base.py  doubao.py  fake.py  openai_compatible.py
src/cairn/engine/: __init__.py  indexer.py  manifest.py
src/cairn/entity/: __init__.py  base.py  fake.py  heuristic.py
src/cairn/index/: __init__.py  entities.py  summaries.py  tree.py  vectors.py  xrefs.py
src/cairn/ingest/: __init__.py  base.py  markdown.py  markitdown.py  pdf.py
src/cairn/mcp/: __init__.py  schemas.py  server.py
src/cairn/summarize/: __init__.py  base.py  cache.py  fake.py  openai_compatible.py  prompts.py
src/cairn/tools/: __init__.py  base.py  find_mentions.py  get_related.py  get_section.py  outline.py  read_range.py  search_keyword.py  search_semantic.py
src/cairn/xref/: __init__.py  base.py  fake.py  heuristic.py
tests/: conftest.py
tests/fixtures/: nested.md  no_headings.md  simple.md  with_frontmatter.md
tests/unit/: conftest.py  test_bench_baseline.py  test_bench_dataset.py  test_bench_judge.py  test_bench_metrics.py  test_bench_runner.py  test_cli.py  test_cli_config.py  test_client_server.py  test_embed_doubao.py  test_embed_fake.py  test_embed_openai_compatible.py  test_engine_indexer.py  test_engine_manifest.py  test_entities_builder.py  test_entity_heuristic.py  test_markdown_parser.py  test_markitdown_parser.py  test_mcp_server.py  test_pdf_parser.py  test_repo.py  test_repo_eval_gates.py  test_summaries_builder.py  test_summaries_reader.py  test_summarize_cache.py  test_summarize_fake.py  test_summarize_openai_compatible.py  test_summarize_prompts.py  test_tool_document_index.py  test_tool_find_mentions.py  test_tool_get_related.py  test_tool_get_section.py  test_tool_outline.py  test_tool_read_range.py  test_tool_search_keyword.py  test_tool_search_semantic.py  test_tree_builder.py  test_types.py  test_vectors_builder.py  test_vectors_reader.py  (+2 more)
