[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "docsgraph"
version = "0.1.0a7"
description = "Local-first documentation graph for AI agents. CodeGraph for docs, exposed through MCP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "The Cairn Authors" }]
keywords = [
    "rag",
    "mcp",
    "model-context-protocol",
    "retrieval",
    "documents",
    "documentation",
    "agents",
    "ai-agents",
    "repository",
    "hierarchical",
    "vector-search",
    "lancedb",
    "pdf",
    "markdown",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "python-slugify>=8.0",
    "structlog>=24.1",
    "httpx[socks]>=0.27",
    "lancedb>=0.13",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "mcp>=1.2",
    "typer>=0.12",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-slugify",
]
markitdown = [
    "markitdown>=0.1.0",
]

[project.scripts]
docsgraph = "cairn.cli.app:app"
cairn = "cairn.cli.app:app"

[project.urls]
Homepage = "https://jokeuncle.github.io/cairn/"
Documentation = "https://github.com/jokeuncle/cairn/tree/main/docs"
Repository = "https://github.com/jokeuncle/cairn"
Issues = "https://github.com/jokeuncle/cairn/issues"
Changelog = "https://github.com/jokeuncle/cairn/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/cairn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["lancedb", "lancedb.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fitz", "pymupdf"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["markitdown", "markitdown.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
